# devtools-course-practice

code/fedosov-alexander/: CMakeLists.txt  CMakeLists.txt~  CTestTests.txt  README.md
code/fedosov-alexander/Includes/: colorspaceconverter.hpp
code/fedosov-alexander/Test/: test_colorspaceconverter.cxx  test_lengthconverter.cxx
code/fedosov-alexander/application/: appconverter.cpp
code/fedosov-alexander/include/: application.hpp  lengthconverter.hpp
code/fedosov-alexander/src/: application.cxx  colorspaceconverter.cxx  lengthconverter.cxx
code/fedosov-alexander/test/: test_lengthconverter.cxx  test_lengthconverter_application.cpp  test_lengthconverter_application.cxx
